# Spelman-Jags

./: README.md  app.py  poetry.py  pyproject.toml  query.py
backend/: app.py  messaging.py  models.py  profile_infomation.py  query.py  routes.py
backend/templates/: style.css
database/: pairings.sql  profile_information.db  profile_information.db-journal  profile_information.sqbpro  query.py  read_in.py
databases/: Airports.csv  Fleet.csv  Flights.csv  Type.csv  Users.csv  profile_infomation.py  profile_information.db
features/: flight_page  flights_data  trading-navigation.py  user-profile
final-app/: package-lock.json
finalProject/final_app/: package-lock.json
finalProject/final_app/src/: App.js
finalProject/final_app/src/components/: Header.js  Schedule.js  TradeRequests.js
frontend/: index.html
poetry-demo/: pyproject.toml
static/css/: login.css
templates/: index.html  login.html
