[tool.poetry]
name = "hackathon_project"
version = "0.1.0"
description = ""
authors = ["Danae Troupe <danaetroupe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.0"
numpy = "^1.26.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
