[tool.poetry]
name = "spelman-jags"
version = "0.1.0"
description = "BE Hackathon Dependencies"
authors = ["Danae Troupe <danaetroupe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flask = "^3.0.0"
pyairtable = "^2.1.0.post1"
trycourier = "^5.0.0"
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^0.15.0"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
